Fix select2 input size, borders, and spacing.

--- a/.dev/assets/shared/css/woocommerce/forms.css
+++ b/.dev/assets/shared/css/woocommerce/forms.css
@@ -30,10 +30,11 @@
 	background-position: calc(100% - 10px) center;
 	background-repeat: no-repeat;
 	border: var(--theme-input--border);
+	border-radius: 0;
 	font-weight: var(--theme-input--weight);
 	height: initial;
 	line-height: 1;
-	padding: var(--theme-button--padding-y) var(--theme-input--padding-x);
+	padding: var(--theme-input--padding-y) var(--theme-input--padding-x);
 }
 
 .select2-container--default .select2-selection--single .select2-selection__arrow {
@@ -52,6 +53,8 @@
 
 .select2-container--default .select2-selection--single .select2-selection__rendered {
 	color: hsl(var(--theme-input--color));
+	font-size: var(--theme-input--font-size);
+	line-height: 1.25;
 }
 
 .select2-results__option {
@@ -69,15 +72,15 @@
 
 .select2-dropdown {
 	border-color: hsl(var(--theme-input--border-color-focus));
-	border-radius: var(--theme-input--radius);
+	border-radius: 0;
 	border-width: var(--theme-input--border-width);
 	line-height: 1.25;
-	padding: 0.5rem;
 }
 
 .select2-container--default .select2-search--dropdown .select2-search__field {
 	border-color: hsl(var(--theme-input--border-color));
-	padding: var(--theme-button--padding-y) var(--theme-input--padding-x);
+	margin-bottom: 0;
+	padding: var(--theme-input--padding-y) var(--theme-input--padding-x);
 }
 
 .woocommerce form.checkout_coupon,
